# quire

./: .gitignore  Dockerfile  README.md  docker-compose.with-verso.yml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/quire/: config.py  main.py
backend/quire/routes/: auth.py  download.py  search.py  sources.py
backend/quire/services/: cf_bypass.py  download_queue.py  verso.py
backend/quire/sources/: annas_archive.py  base.py  gutenberg.py  libgen.py  openlibrary.py  registry.py  setup.py  standard_ebooks.py  zlibrary.py
backend/tests/: test_annas_archive.py  test_cf_bypass.py  test_download_queue.py  test_gutenberg.py  test_health.py  test_libgen.py  test_openlibrary.py  test_search_route.py  test_source_registry.py  test_verso_client.py  test_zlibrary.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Downloads.tsx  LoginForm.tsx  SearchBar.tsx  SearchResults.tsx
frontend/src/lib/: api.ts
